
3.6.11 (xth January 2023) BETA
* NEW:
   * Add File - Close translated subtitle - thx zcraber/Leon 
   * Add auto-naming rule for translation - thx Leon/OmrSi
   * Add more Whisper post-processing
   * Add line merge option for Google Cloud Vision OCR
   * Add new subtitle format - thx Christophe
   * Add new subtitle format - thx Chris
   * Add ASSA style "Replace" - thxMishasama
* IMPROVED:
   * Update Chinese translation - thx nkh0472
   * Update Korean translation - thx domddol
   * Update Italian translation - thx bovirus
   * Update Polish translation - thx admas
   * Update Portuguese translation - thx hugok79
   * Update Finnish translation - thx Teijo S
   * Update Hungarian translation - thx Zityi
   * Update French translation - thx Pierre
   * Update Bulgarian translation - thx Калин
   * Improve DVB in mkv (fix batch/cmd convert + pos) - thx antoniu200
   * Better ffmpeg detection - thx SMSourov
   * Avoid standby a few places - thx mpek
   * Optimize ASSA style import
   * Improve line split a little - thx i990049
   * Add a few English words/names to dictionaries
   * Make formatting shortcuts in waveform work w multi-lines
   * Remember font in burn-in - thx Nespula95
   * Remember "Merge lines with same text" settings - thx kamitsu2004
   * Update Whisper CPP to v1.0.4
   * Rename "Fix dialogs on one line" to "Break dialogs on one line"
* FIXED:
   * Fix italic in DCinema interop - thx Andrey
   * Fix Whisper model download - thx darnn
   * Fix "play video from url" for installer version
   * Keep bookmarks after source view edit - thx MMT
   * Fix for "replace all" non reg-ex
   * Fix wrongful removal of "Unneeded Space" - thx Minherre
   * Fix possible crash in Choosee Profile - thx darnn
   * Make "Add missing space" work with non-English letters - thx Redjan
   * Fix a few UI issues in "Word lists" - thx Edwin
   * Fix crash in "Sync via other sub" - thx JP
   * Fix original desync after set start time - thx Leon


3.6.10 (21th November 2022)