@@ -2851,7 +2851,8 @@ can edit in same subtitle file (collaboration)",
                 VideoResetSpeedAndZoom = "Reset play rate (speed) and waveform zoom",
                 MainToggleVideoControls = "Toggle video controls",
                 VideoToggleContrast = "Toggle contrast (mpv only)",
-                VideoAudioToText = "Audio to text",
+                AudioToTextX = "Audio to text ({0})",
+                AudioToTextSelectedLinesX = "Audio to text selected lines ({0})",
                 VideoToggleBrightness = "Toggle brightness (mpv only)",
                 CustomSearch1 = "Translate, custom search 1",
                 CustomSearch2 = "Translate, custom search 2",
