@@ -2705,7 +2705,8 @@ namespace Nikse.SubtitleEdit.Logic
             public string VideoResetSpeedAndZoom { get; set; }
             public string MainToggleVideoControls { get; set; }
             public string VideoToggleContrast { get; set; }
-            public string VideoAudioToText { get; set; }
+            public string AudioToTextX { get; set; }
+            public string AudioToTextSelectedLinesX { get; set; }
             public string VideoToggleBrightness { get; set; }
             public string CustomSearch1 { get; set; }
             public string CustomSearch2 { get; set; }
