@@ -9,6 +9,7 @@
    * Add new subtitle format - thx Christophe
    * Add new subtitle format - thx Chris
    * Add ASSA style "Replace" - thxMishasama
+   * Add "audio to text selected lines" shortcuts
 * IMPROVED:
    * Update Chinese translation - thx nkh0472
    * Update Korean translation - thx domddol
